# jina-cli

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
.opencode/plans/: 1775097940618-tidy-meadow.md  1775101457869-brave-eagle.md
jina_cli/: __init__.py  api.py  main.py  utils.py
skills/jina-cli/: SKILL.md
skills/jina-cli/references/: basics.md  search-read.md
tests/: test_cli.py  test_local.py
