[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jina-cli"
version = "0.3.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0", "click>=8.1.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
jina = "jina_cli.main:cli"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["jina_cli"]
